--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,26 +10,32 @@
 h1 {
     text-align: center;
     font-size: 40px;
-    color: #f7f7f7;
-    text-shadow: 2px 2px 4px rgb(255,0,0,0.4);
+    color: #cecdcd;
+    font-weight: 700;
+    letter-spacing: 1.25px;
 }
 
 ul {
     list-style-type: none;
 }
 
+ul li:hover {
+    color: rgb(233, 233, 84);
+    cursor: pointer;
+}
+
 .menu-list {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.25rem;
-    font-size: 1.25rem;
-    color: #E01823;
+    gap: 20px;
+    font-size: 24px;
+    color: #cecdcd;
 }
 
 .grid-container {
     font-family: "Open Sans", sans-serif;
-    overflow-x: hidden ;
+    overflow-x: hidden;
     height: 100vh;
     display: grid;
     background-image: url(/assets/img/Car-BG.jpg);
@@ -42,14 +48,13 @@ ul {
         "footer";
 }
 
-
 @media screen and (min-width: 576px) {
     .grid-container {
         grid-template-areas:
             "nav image-gallery"
             "nav products"
             "footer footer";
-        grid-template-columns: 15% 1fr;
+        grid-template-columns: 300px auto;
         grid-template-rows: auto auto 15%;
     }
 }
@@ -59,15 +64,14 @@ nav {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 16px;
     grid-area: nav;
     background-color: none;
-    color: white;
+    color: #cecdcd;
 }
 
 @media screen and (max-width: 576px) {
-   
-    .menu-list{
+    .menu-list {
         display: none;
     }
     .product-gallery {
@@ -76,21 +80,33 @@ nav {
     section.image-gallery {
         display: none;
     }
-}   
+    nav {
+        border-bottom: thin solid rgb(255, 255, 255, 0.1);
+    }
+    .brand p {
+        font-size: 20px;
+        letter-spacing: 0.5px;
+    }
+}
 
 @media screen and (min-width: 576px) {
     nav {
         flex-direction: column;
-        padding-top: 1.5rem;
         justify-content: flex-start;
-        gap: 3.5rem;
+        gap: 56px;
+        margin-top: 24px;
     }
-    
+
     .brand p {
-        font-size: 1.25rem;
-        padding-left: 0.5rem;
+        font-size: 28px;
+        letter-spacing: 0.75px;
+        padding-left: 8px;
     }
-    
+
+    .brand i {
+        font-size: 32px;
+    }
+
     .menu i {
         display: none;
     }
@@ -99,12 +115,12 @@ nav {
 .image-gallery {
     grid-area: image-gallery;
     height: min-content;
-    gap: 1rem;
+    gap: 32px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1.5rem;
+    padding: 32px 24px 24px 24px;
     background-color: none;
 }
 
@@ -118,24 +134,24 @@ nav {
 .image-container {
     flex-grow: 1;
     flex-basis: 0;
-    transition: .5s ease-out;
+    transition: 0.5s ease-out;
 }
 
 .image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .image-container img {
-    border: 2px solid rgb(255, 255, 255, .3);
+    border: 2px solid rgb(255, 255, 255, 0.3);
 }
 
 .image-container:not(:first-child) img {
     filter: grayscale(100%);
 }
-   
+
 .image-container:not(:first-child) img:hover {
     filter: grayscale(0%);
 }
@@ -156,7 +172,7 @@ nav {
     }
 }
 
-.image-container:nth-child(1):hover{
+.image-container:nth-child(1):hover {
     flex-basis: 50%;
 }
 
@@ -165,42 +181,23 @@ nav {
     background-color: none;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
+    align-items: center;
+    gap: 16px;
+    padding: 16px;
 }
 
 @media screen and (min-width: 576px) {
     .products {
-       margin-bottom: 1.5rem;
-       padding: 0;
+        margin-bottom: 40px;
+        padding: 0;
     }
-}  
+}
 
 .brand {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.75rem;
-}
-
-.filter-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 0.25rem;
-}
-
-.select {
-    border: solid thin #D8DCE1;
-    border-radius: 4px;
-    width: 100%;
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 0.75rem;
-    background-color: white;
+    gap: 12px;
 }
 
 .product-gallery {
@@ -208,14 +205,14 @@ nav {
     height: auto;
     background-color: none;
     display: grid;
-    gap: 2rem;
-    padding-bottom: 0.5rem ;
+    gap: 32px;
+    padding-bottom: 8px;
 }
 
 @media screen and (min-width: 576px) {
     .product-gallery {
         grid-template-columns: repeat(4, 1fr);
-        padding: 1.5rem;
+        padding: 24px;
     }
 }
 
@@ -226,16 +223,15 @@ nav {
     align-items: center;
     height: 100%;
     width: 100%;
-    padding-bottom: 2rem;
+    padding-bottom: 32px;
     background-color: transparent;
     border: 2px solid rgba(255, 255, 255, 0.3);
-    /* border-radius: 4px; */
     box-shadow: 0px 4px 4px 0.5px rgba(0, 0, 0, 0.15);
 }
 
 .product-image {
     height: 100%;
-    padding: 1.5rem;
+    padding: 24px;
 }
 
 img {
@@ -245,26 +241,34 @@ img {
 }
 
 .product-name {
-    padding-bottom: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 0.3px;
-    color: #c4c4c4;
+    padding-bottom: 24px;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    color: #aaaaaa;
 }
 
 .product-CTA-button {
+    font-family: "Roboto", sans-serif;
     border: none;
     background-color: transparent;
-    border: 2px solid rgb(235, 235, 94, .6);
+    border: 2px solid rgb(233, 233, 84);
     color: #c4c4c4;
+    letter-spacing: 1px;
     width: fit-content;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
-    
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.product-CTA-button:hover {
+    background-color: rgb(233, 233, 84);
+    color: #070707;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .product-pagination {
-    width: 100%;
+    width: fit-content;
     height: auto;
     background-color: transparent;
     display: flex;
@@ -272,24 +276,45 @@ img {
     align-items: center;
 }
 
+/* .product-pagination:hover .product-pagination-button{
+    border: none;
+} */
+
 .product-pagination-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2.5rem;
-    width: 2.5rem;
-    border-color: rgb(255, 255, 255, .3);
+    height: 40px;
+    width: 40px;
+    border-color: rgb(78, 78, 78);
     border-style: solid none solid solid;
     border-width: 2px;
 }
 
+.product-pagination-button:hover {
+    background-color: rgb(233, 233, 84);
+    border-style: solid;
+    border-color: rgb(233, 233, 84);
+    color: #070707;
+    cursor: pointer;
+}
+
 .product-pagination-button:last-of-type {
-    border-right: solid rgb(255, 255, 255, .3);
+    border-right: solid rgb(78, 78, 78);
     border-width: 2px;
 }
 
+.product-pagination-button:last-of-type:hover {
+    border-color: rgb(233, 233, 84);
+}
+
 .button-label {
-    color: rgba(255, 255, 255, 0.8);
+    color: #c4c4c4;
+}
+
+.product-pagination-button:hover .button-label {
+    color: #070707;
+    font-weight: 700;
 }
 
 footer {
@@ -298,26 +323,26 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
-    background-color: #012f6b;
-    color: white;
-    padding: 0rem;
+    gap: 8px;
+    background-color: #141414;
+    color: #cecdcd;
+    padding: 0;
     text-align: center;
 }
 
 @media screen and (min-width: 576px) {
     footer {
-       gap: 0.75rem;
-       padding: 2rem;
+        gap: 12px;
+        padding: 32px;
     }
-}  
+}
 
 .social-list {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.675rem;
+    gap: 12px;
     height: 22px;
 }
 
@@ -327,7 +352,7 @@ footer {
 }
 
 .fa-facebook {
-    font-size: 20px
+    font-size: 20px;
 }
 
 footer p {
@@ -335,13 +360,3 @@ footer p {
     letter-spacing: 0.5px;
     line-height: 150%;
 }
- 
-/* .filter {
-    grid-area: image-gallery;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    background-color: #e2e2e2;
-} */
