--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,37 @@
     text-decoration: none;
 }
 
+.cog {
+    fill: rgb(233, 233, 84);
+}
+
+.thunder {
+    fill: rgb(233, 233, 84);
+}
+
+.logo {
+    display: grid
+}
+
+.cog, .thunder {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.cog {
+    animation: spin 3s ease 1s 2 alternate;
+
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 h1 {
     text-align: center;
     font-size: 40px;
@@ -38,7 +69,7 @@ ul li:hover {
     overflow-x: hidden;
     height: 100vh;
     display: grid;
-    background-image: url("/assets/img/Car-BG.jpg");
+    background-image: url(/assets/img/Car-BG.jpg);
     background-color: #070707;
     grid-template-columns: 100%;
     grid-template-rows: 9% 80% 11%;
@@ -77,7 +108,7 @@ nav {
     .product-gallery {
         overflow-y: auto;
     }
-    section.image-gallery {
+    main.image-gallery {
         display: none;
     }
     nav {
@@ -87,9 +118,16 @@ nav {
         font-size: 20px;
         letter-spacing: 0.5px;
     }
+    .brand svg {
+        max-width: 40px;
+    }
 }
 
 @media screen and (min-width: 576px) {
+    .brand svg {
+        max-width: 56px;
+    }
+
     nav {
         flex-direction: column;
         justify-content: flex-start;
