--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,11 @@ nav {
         letter-spacing: 1px;
         padding-bottom: 16px;
     }
+    .grid-container {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 77% 50%;
+    }
 }
 
 @media screen and (min-width: 576px) {
